<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">NFCPay</string>
    <string name="merchantId">Merchant Id</string>
    <string name="terminalId">Terminal Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="pay">PAY</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="separator">,</string>
    <string name="Clear">clr</string>
    <string name="plsEnterAmount">Please enter amount</string>
    <string name="zeroEur">€0.00</string>
    <string name="close">Close</string>
    <string name="cannotReadCard">Cannot read card</string>
    <string name="successReadCard">Success read card</string>
    <string name="nfcA">NFC A</string>
    <string name="nfcB">NFC B</string>
    <string name="rootedDevice">Rooted device !</string>
    <string name="adbEnabled">ADB Enabled !</string>
    <string name="emulatorDetected">Emulator detected !</string>
    <string name="plzDisableADB">Please disable ADB</string>
    <string name="appCantRun">This application cannot run</string>
    <string name="onRootedDevice">on rooted device</string>
    <string name="onEmulator">on emulator</string>
    <string name="onThisDevice">on this device</string>
    <string name="payAmount">PAY AMOUNT</string>
    <string name="pan">PAN</string>
    <string name="cardAppLabel">Card Application Label</string>
    <string name="paidAmount">Paid Amount</string>
    <string name="cardBehindDevice">Please hold credit card behind the device</string>
    <string name="payment">Payment</string>
    <string name="yourPaymentSuccess">Your payment has been successfully completed</string>
    <string name="notSupportNFC">This device does not support NFC feature</string>
    <string name="ok">OK</string>
    <string name="plzEnableNFC">Please Enable NFC feature</string>
    <string name="_00">00</string>
    <string name="payment_result">Payment Result</string>
    <string name="payment_approved">PAYMENT APPROVED</string>
    <string name="total_amount">Total Amount:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="create_receipt">CREATE RECEIPT</string>
    <string name="done">DONE</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="print">PRINT</string>
    <string name="qr">QR</string>
    <string name="mail">MAIL</string>
    <string name="sms">SMS</string>
    <string name="valueShort">Value is too short!</string>
    <string name="nfcNotEnabled">NFC Not Enabled !</string>
    <string name="nfcNotSupported">NFC Not Supported !</string>
    <string name="plzEnterAmount">Please enter amount !</string>
    <string name="valueIsTooLong">Value is too long !</string>

</resources>
