<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payresult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.PayResult">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textSize="25sp"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/payment_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/lytApprove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D2537"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@+id/header">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="#00C853"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/payment_approved"
                android:gravity="center"
                android:layout_height="wrap_content">
            </TextView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/circle2"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="34dp"
                    android:backgroundTint="#FFFFFF"
                    android:layout_centerInParent="true"
                    android:background="@drawable/approve">
                </ImageView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytApprove"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/cardLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp">
            </ImageView>
            <View
                android:layout_width="5dp"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/stroke2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/stroke2" />

                <TextView
                    android:id="@+id/appLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/transactionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardInfo"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/blue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/total_amount">
            </TextView>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalAmount"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/date">
            </TextView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/time">
            </TextView>

            <TextView
                android:id="@+id/valAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:layout_margin="5dp">
            </TextView>

            <TextView
                android:id="@+id/valDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/valAmount"
                android:textSize="20sp"
                android:layout_margin="5dp">
            </TextView>

            <TextView
                android:id="@+id/valTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/valDate"
                android:textSize="20sp"
                android:layout_margin="5dp">
            </TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRcpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        android:text="@string/create_receipt"
        android:gravity="center"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDone">
    </Button>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn"
        android:text="@string/done"
        android:padding="10dp"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        android:gravity="center"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>